feat: starting to understand the architecture lol
